# map_manager

./: CMakeLists.txt  README.md  package.xml
config/: map_manager_load_config.yaml
include/map_manager/: map_manager.hpp
launch/: map_manager.launch.py
maps/: mars_yard_traversability_areas_borders.pgm  mars_yard_traversability_areas_borders_slope.pgm
src/: map_manager.cpp  map_manager_server.cpp
